# esimbot

./: README.md  airalo_api.py  bot.py  crypto_payment.py  fallback_solana.py  install_deps.sh  pyproject.toml  render.yaml  requirements-direct.txt  requirements.txt  service_api.py  setup.py  setup_fallback.py  solana_payments.py
fallback_modules/solana/: __init__.py  transaction.py
fallback_modules/solana/rpc/: __init__.py  api.py  commitment.py  types.py
fallback_modules/solders/: __init__.py  hash.py  instruction.py  keypair.py  pubkey.py  system_program.py
tests/: test_additional_payment.py  test_bot.py  test_mock_payment.py  test_payment_edge_cases.py  test_solana.py  test_sweep_real.py  test_token_amount.py  test_tx_status.py
