[build-system]
requires = [
    "setuptools>=45",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "esimbot"
version = "0.1.0"
description = "Telegram bot for eSIM top-ups"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "python-telegram-bot==20.8",
    "python-dotenv==1.0.1",
    "requests==2.31.0",
    "aiohttp==3.9.3",
    "certifi==2024.2.2",
    "solders==0.19.0",
    "base58==2.1.1",
    "httpx==0.23.3",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "pytest",
]
